[tool.poetry]
name = "miblog"
version = "0.1.0"
description = "Personal blog"
authors = ["Juan Rey <juan.rey@tuta.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
django-environ = "^0.11.2"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
